cabal-version: 3.0
version: 0.0
name: rlist

common extensions
  default-extensions:
    BangPatterns
    ExplicitForAll
    InstanceSigs
    TypeApplications
    TypeFamilies
    ScopedTypeVariables

common simple
  import: extensions
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base, deepseq ^>= 1.4

library
  import: simple
  hs-source-dirs: .
  exposed-modules: Rlist, Rlist.Internal

test-suite rlist-test
  import: simple
  type: exitcode-stdio-1.0
  hs-source-dirs: test/
  main-is: Spec.hs
  ghc-options: -Wno-orphans
  build-depends: rlist
               , random ^>= 1.1
               , QuickCheck ^>= 2.13

benchmark rlist-bench
  import: simple
  type: exitcode-stdio-1.0
  hs-source-dirs: bench/
  main-is: Bench.hs
  ghc-options: -Wno-orphans
  build-depends: rlist
               , criterion ^>= 1.5